fix spacing inconsistencies on home and services pages; update margin and padding values for better layout responsiveness

--- a/src/styles/pages/_services-page.scss
+++ b/src/styles/pages/_services-page.scss
@@ -5,11 +5,11 @@
     text-align: center;
 
     @include tablet {
-      padding: $spacing-10 0;
+      padding: $spacing-13 0;
     }
 
     @include mobile {
-      padding: $spacing-8 0;
+      padding: $spacing-13 0;
     }
 
     &__inner {
